logs/restish.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/WebOb-1.7.4.dist-info'...
Listing './lib/python3.5/site-packages/decorator-4.1.2.dist-info'...
Listing './lib/python3.5/site-packages/mimeparse-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/restish'...
Compiling './lib/python3.5/site-packages/restish/app.py'...
***   File "./lib/python3.5/site-packages/restish/app.py", line 19
    except error.HTTPError, e:
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/restish/contrib'...
Compiling './lib/python3.5/site-packages/restish/guard.py'...
***   File "./lib/python3.5/site-packages/restish/guard.py", line 109
    except GuardError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/restish/pastertemplate'...
Listing './lib/python3.5/site-packages/restish/pastertemplate/+package+'...
Listing './lib/python3.5/site-packages/restish/pastertemplate/+package+/lib'...
Listing './lib/python3.5/site-packages/restish/pastertemplate/+package+/public'...
Listing './lib/python3.5/site-packages/restish/pastertemplate/+package+/resource'...
Listing './lib/python3.5/site-packages/restish/pastertemplate/+package+/tests'...
Listing './lib/python3.5/site-packages/restish/tests'...
Compiling './lib/python3.5/site-packages/restish/tests/test_guard.py'...
***   File "./lib/python3.5/site-packages/restish/tests/test_guard.py", line 43
    except http.UnauthorizedError, e:
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/restish/tests/test_templating.py'...
***   File "./lib/python3.5/site-packages/restish/tests/test_templating.py", line 108
    except TypeError, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/restish-0.12.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/webob'...
Listing './share'...
Listing './share/python-wheels'...
